@@ -1,5 +1,6 @@
 
 0.9.9e Nov 27, 2004
+ * get_installed_pkgs() now parses out the packages description as well
  * make --search show installed packages that aren't present in available
    package list from current sources
  * updated typedefs
